--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ article {
 @media screen and (max-width: 600px) {
     article {
         display: grid;
+        width: 100%;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         grid-template-areas: "name" "summary" "history";
